Twenty Twenty-One: Prevent `<iframe>` embeds from being too narrow.
This fixes an issue where `<iframe>` embeds were being pushed to the side of the screen and compressed to the point of being unusable.

Props helen, mukesh27, poena, thorlentz.
Merges [49823] to the 5.6 branch.
Fixes #52004.
Built from https://develop.svn.wordpress.org/branches/5.6@49851


git-svn-id: http://core.svn.wordpress.org/branches/5.6@49570 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwentyone/assets/sass/06-components/entry.scss
+++ b/wp-content/themes/twentytwentyone/assets/sass/06-components/entry.scss
@@ -53,10 +53,6 @@ h1.entry-title {
 
 		margin: var(--global--spacing-vertical) 0 !important;
 		max-width: 100% !important;
-
-		@include media(mobile) {
-			max-width: var(--global--spacing-vertical) !important;
-		}
 	}
 
 	// Classic editor audio embeds.
